[gd_scene load_steps=22 format=3 uid="uid://jxokqb3pqe7w"]

[ext_resource type="Script" uid="uid://bs4gyl0cdunp8" path="res://scripts/menu_of_death_many.gd" id="1_fg2xf"]
[ext_resource type="FontFile" uid="uid://8a5ad5bw24y" path="res://resourse/data for the main menu/ZenterSPDemo-Black.otf" id="1_onud0"]
[ext_resource type="Texture2D" uid="uid://dyq2xf2pcbd3o" path="res://resourse/sprites/player/IDLE.png" id="3_5c5vo"]
[ext_resource type="Texture2D" uid="uid://edm0nlsicmtt" path="res://resourse/sprites/player_two/Knight_player_1.4/Knight_player_1.4/Knight_player/Idle_KG_2.png" id="4_pvfy7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pvfy7"]
atlas = ExtResource("3_5c5vo")
region = Rect2(0, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_xb6yu"]
atlas = ExtResource("3_5c5vo")
region = Rect2(96, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_57bky"]
atlas = ExtResource("3_5c5vo")
region = Rect2(192, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_lepa4"]
atlas = ExtResource("3_5c5vo")
region = Rect2(288, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_dtxsk"]
atlas = ExtResource("3_5c5vo")
region = Rect2(384, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_r2ywp"]
atlas = ExtResource("3_5c5vo")
region = Rect2(480, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8fv5"]
atlas = ExtResource("3_5c5vo")
region = Rect2(576, 0, 96, 84)

[sub_resource type="SpriteFrames" id="SpriteFrames_mlhnx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvfy7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xb6yu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_57bky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lepa4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dtxsk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r2ywp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8fv5")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_4seq2"]
atlas = ExtResource("4_pvfy7")
region = Rect2(0, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xesx4"]
atlas = ExtResource("4_pvfy7")
region = Rect2(100, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lu5f1"]
atlas = ExtResource("4_pvfy7")
region = Rect2(200, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h2omh"]
atlas = ExtResource("4_pvfy7")
region = Rect2(300, 0, 100, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_xb6yu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4seq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xesx4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lu5f1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h2omh")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_onud0"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 8
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fg2xf"]
bg_color = Color(0.5132329, 0.5132329, 0.5132329, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 8
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5c5vo"]
bg_color = Color(0.74138474, 0.7413847, 0.74138457, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 8
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pvfy7"]

[node name="menu_of_death_many" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fg2xf")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -240.0
offset_right = 240.0
offset_bottom = 65.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_onud0")
theme_override_font_sizes/font_size = 40
text = "Статистика: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -616.0
offset_top = -246.0
offset_right = -34.0
offset_bottom = 337.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -135.5
offset_right = 135.5
offset_bottom = 52.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_onud0")
theme_override_font_sizes/font_size = 26
text = "Игрок 1:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="KillsP1" type="Label" parent="Panel/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -289.0
offset_top = 76.0
offset_right = 292.0
offset_bottom = 163.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_onud0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="DamageP1" type="Label" parent="Panel/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -292.0
offset_top = 176.0
offset_right = 289.0
offset_bottom = 263.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_onud0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthP1" type="Label" parent="Panel/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -289.0
offset_top = 273.0
offset_right = 292.0
offset_bottom = 360.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_onud0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Panel/Panel"]
position = Vector2(283, 472)
scale = Vector2(5.484375, 5.380952)
sprite_frames = SubResource("SpriteFrames_mlhnx")
autoplay = "default"
frame_progress = 0.67217034

[node name="Panel2" type="Panel" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 28.0
offset_top = -246.0
offset_right = 610.0
offset_bottom = 337.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/Panel2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -135.5
offset_right = 135.5
offset_bottom = 52.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_onud0")
theme_override_font_sizes/font_size = 26
text = "Игрок 2:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="KillsP2" type="Label" parent="Panel/Panel2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -289.0
offset_top = 76.0
offset_right = 292.0
offset_bottom = 163.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_onud0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="DamageP2" type="Label" parent="Panel/Panel2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -289.0
offset_top = 151.0
offset_right = 292.0
offset_bottom = 238.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_onud0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthP2" type="Label" parent="Panel/Panel2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -289.0
offset_top = 368.0
offset_right = 292.0
offset_bottom = 455.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_onud0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Panel/Panel2"]
position = Vector2(304.99997, 484.00003)
scale = Vector2(2.9550006, 3.2656238)
sprite_frames = SubResource("SpriteFrames_xb6yu")
autoplay = "default"

[node name="Button3" type="Button" parent="Panel"]
layout_mode = 1
offset_right = 161.0
offset_bottom = 42.0
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_onud0")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_onud0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fg2xf")
theme_override_styles/hover = SubResource("StyleBoxFlat_5c5vo")
theme_override_styles/focus = SubResource("StyleBoxEmpty_pvfy7")
text = "меню"

[connection signal="pressed" from="Panel/Button3" to="." method="_on_button_3_pressed"]
